tests/NormalTests/paczka1/fuzzy1/69462971.err
Error in line 2: DVGC A878 23,6
Error in line 3: DVGC S607 57,1
Error in line 8: kjCAX A878 6:,4
Error in line 20: S871 A878 51,46
Error in line 22: DVGC A878 28,9
Error in line 21: S871 A878 116,6
Error in line 31: S871 S607 3,3
